coin composition refactor, coin search query, other small refactors